broken css fixed

--- a/hosted/style.css
+++ b/hosted/style.css
@@ -62,7 +62,6 @@ html, body {
 #logo {
     height: 40px;
     width: 40px;
-    padding-top: 3px;
     padding-left: 5px;
     float:left;
     border-radius: 8px;
@@ -70,7 +69,7 @@ html, body {
 
 nav {
     width: 100%;
-    height: 5vh;
+    height: 6vh;
     background-color: #A0A0A0;
 }
 
@@ -80,7 +79,7 @@ nav:nth-child(1) {
 
 .navlink {
     padding: 5px;
-    padding-top: 12px;
+    padding-top: 10px;
     padding-left: 20px;
     color: #000000;
     font-size: 1.3em;
@@ -105,7 +104,7 @@ nav:nth-child(1) {
 /* Chat Page */
 
 #chatStuff{
-    height: 95vh;
+    height: 94vh;
     width: 100vw;
     flex-direction: row;
     display: flex;
@@ -219,7 +218,7 @@ form {
 
 #loginContainer{
     width: 40%;
-    height: 50%;
+    height: 65%;
     background: #4B4B4B;
     margin: 0 auto;
     display: flex;
